--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ pkg
 
 Gemfile.lock
 .rvmrc
+jetty
+tmp
 
 # Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
 #
