--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: ruby
 rvm:
-  - "1.9.3"
-  - "2.0.0"
+  - 1.9.3
+  - 2.0.0
+
+gemfile:
+  - gemfiles/gemfile.rails3
+  - gemfiles/gemfile.rails4
 
 notifications:
   irc: "irc.freenode.org#projecthydra"
