--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.2
+  - 1.9.3
+  - 2.0.0
+  - 2.1
+
+gemfile:
+  - gemfiles/gemfile.rails3
+  - gemfiles/gemfile.rails4
 
 jdk:
   - oraclejdk8
