--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.1.10
-  - 2.2.5
-  - 2.3.1
+  - 2.2.10
+  - 2.3.7
+  - 2.4.4
+  - 2.5.1
+
 jdk:
   - oraclejdk8
+
+matrix:
+  include:
+    - rvm: 2.5.1
+      env: ACTIVEMODEL_VERSION=5.1.6
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
