--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,14 +55,17 @@ workflows:
       - test:
           name: "ruby2-6_rails5-2"
           ruby_version: "2.6.3"
+          bundler_version: "2.0.2"
           rails_version: "5.2.3"
       - test:
           name: "ruby2-5_rails5-2"
           ruby_version: "2.5.5"
+          bundler_version: "2.0.2"
           rails_version: "5.2.3"
       - test:
           name: "ruby2-4_rails5-2"
           ruby_version: "2.4.6"
+          bundler_version: "2.0.2"
           rails_version: "5.2.3"
       - test:
           name: "ruby2-6_rails5-1"
@@ -80,6 +83,7 @@ workflows:
           name: "jruby9-2_rails5-2"
           ruby_type: "jruby"
           ruby_version: "9.2.0.0"
+          bundler_version: "2.0.2"
           rails_version: "5.2.3"
       - test:
           name: "jruby9-2_rails5-1"
@@ -90,9 +94,11 @@ workflows:
           name: "jruby9-1_rails5-2"
           ruby_type: "jruby"
           ruby_version: "9.1.17.0"
+          bundler_version: "2.0.2"
           rails_version: "5.2.3"
       - test:
           name: "jruby9-1_rails5-1"
           ruby_type: "jruby"
           ruby_version: "9.1.17.0"
+          bundler_version: "2.0.2"
           rails_version: "5.1.7"
